--- a/antyboty/package.json
+++ b/antyboty/package.json
@@ -16,6 +16,7 @@
     "openai": "^4.84.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.29.0"
   },
   "devDependencies": {
