--- a/antyboty/tsconfig.json
+++ b/antyboty/tsconfig.json
@@ -5,6 +5,13 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "strict": true 
+    "module": "CommonJS",
+    "target": "ES6",
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   }
+  
 }
