added delete, creat, bot instruction, chhat histor y. chat creation is not creating the correct chat history.

--- a/antyboty/package.json
+++ b/antyboty/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
     "openai": "^4.84.1",
     "pg": "^8.13.3",
     "react": "^19.0.0",
