--- a/antyboty/package.json
+++ b/antyboty/package.json
@@ -22,6 +22,8 @@
     "express": "^4.21.2",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
+    "languagetool-api": "^1.1.2",
+    "markdown-it": "^14.1.0",
     "mongoose": "^8.12.1",
     "openai": "^4.84.1",
     "pg": "^8.13.3",
@@ -31,6 +33,8 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^6.29.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.15",
     "yup": "^1.6.1"
   },
@@ -40,6 +44,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/markdown-it": "^14.1.2",
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
