--- a/antyboty/package.json
+++ b/antyboty/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.29.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "stripe": "^18.0.0",
     "styled-components": "^6.1.15",
     "yup": "^1.6.1"
   },
